src/main/kotlin/com/example/onui/global/config/error/exception/ExpiredTokenException.kt
package com.example.onui.global.config.error.exception

import com.example.onui.global.config.error.data.ErrorCode


object ExpiredTokenException: BusinessException(ErrorCode.EXPIRED_TOKEN)
